--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   },
   "homepage": "https://github.com/DanilSord/GitBot#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "node-vk-bot-api": "^3.3.4"
+    "mongoose": "^5.9.15",
+    "querystring": "^0.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
